# sqlx-seeder

./: Cargo.toml  README.md
example/todo/: Cargo.toml
example/todo/src/: main.rs
seeds/: Cargo.toml
seeds-cli/: Cargo.toml
seeds-cli/src/: database.rs  lib.rs  opt.rs  seeds.rs
seeds-core/src/: Cargo.toml  error.rs  mod.rs  seeder.rs  seeds.rs  seeds_type.rs  source.rs
seeds/src/: migrate.rs
